--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My Repositories
+title: Coronavirus
 author: fededev01
 email: fede.dev01@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
